<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".TimerSecondpage">

    <!-- Timer Title -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="left"
        android:text="@string/Timer"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Settings Icon -->
    <ImageView
        android:id="@+id/ivSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/settings"
        android:src="@drawable/baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Timer Frame -->
    <FrameLayout
        android:id="@+id/flTimer"
        android:layout_width="350dp"
        android:layout_height="350dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <ImageView
            android:id="@+id/ivClock"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_gravity="left"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="260dp"
            android:contentDescription="@string/clock"
            android:src="@drawable/baseline_notifications_24" />

        <TextView
            android:id="@+id/tvCurrentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="55dp"
            android:text="@string/pm6"
            android:textColor="#5B5B5B"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTimeLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:text="@string/zero"
            android:textColor="@color/darker_purple"
            android:textSize="50sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/pbTimer"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:background="@drawable/gray_progressbar_background"
            android:indeterminate="false"
            android:max="10"
            android:progress="10"
            android:progressDrawable="@drawable/blue_progressbar_background"
            android:rotation="-90" />
    </FrameLayout>

    <!-- Button Container -->
    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/navigation_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flTimer">

        <Button
            android:id="@+id/btnLap"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:backgroundTint="@color/light_gray"
            android:text="@string/Delete"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnStartStopReset"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:backgroundTint="@color/red"
            android:text="@string/Resume"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Bottom Navigation Bar -->
    <LinearLayout
        android:id="@+id/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flTimer">

        <!-- Home Button -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/icon_task"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:contentDescription="@string/Task_Title"
                android:src="@drawable/baseline_add_task_24"
                android:background="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taskNav"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Timer Button -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/icon_timer"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:contentDescription="@string/Timer"
                android:background="@color/white"
                android:src="@drawable/baseline_timer_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Timer"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
